# dexter-v3

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION-PLAN.md  WORKSPACE-ARCHITECTURE.md  drizzle.config.ts  package-lock.json  package.json  pi-session-2026-06-13T03-50-23-639Z_019ebf1a-2a95-7099-8f6e-c57d17ee4aa4.html  pi-session.jsonl  pr_description.md  render.yaml  vitest.config.ts
.specify/: feature.json  integration.json
graphify-out/: .chunk_1.txt  .chunk_2.txt  .chunk_3.txt  .chunk_4.txt  .chunk_5.txt  .chunk_6.txt  .chunk_7.txt  .chunk_8.txt  .chunk_9.txt  .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
prisma/: schema.prisma
services/agent/: .coverage  pyproject.toml
services/agent/app/: config.py  main.py
services/agent/app/db/: connection.py  memory.py
services/agent/app/graph/: builder.py  state.py
services/agent/app/graph/nodes/: llm.py  router.py  tools.py
services/agent/app/graph/subgraphs/: code.py  research.py
services/agent/app/models/: providers.py
services/agent/app/prompts/: system.py
services/agent/app/tools/: __init__.py  browser.py  composio.py  delegate.py  files.py  mcp_bridge.py  memory.py  search.py  tasks.py  terminal.py
services/agent/tests/: test_checkpoint.py  test_graph.py  test_memory.py  test_providers.py  test_subgraphs.py  test_tools.py
src/: middleware.ts  proxy.ts
(+177 files in other folders)
