[project]
name = "agent"
version = "0.1.0"
description = "Python agent service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "copilotkit>=1.59.5",
    "langgraph>=0.1.3",
    "langgraph-checkpoint-postgres>=2.0.10",
    "langchain-core>=0.2.10",
    "langchain-anthropic>=0.1.19",
    "langchain-openai>=0.1.16",
    "langchain-google-genai>=1.0.7",
    "asyncpg>=0.29.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "structlog>=24.2.0",
    "composio-langgraph>=0.2.49"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0"
]
