[project]
name = "dexter-agent"
version = "0.1.0"
description = "Dexter v3 Agent Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "copilotkit",
    "langgraph",
    "langgraph-checkpoint-postgres",
    "langchain-core",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-google-genai",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "composio-langgraph"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]
